--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "5.5.0"
+    "karma-junit-reporter": "2.0.1",
+    "puppeteer": "8.0.0"
   }
 }
