--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
+    "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
     "puppeteer": "8.0.0"
   }
