--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "browserstack-local": "1.4.8",
     "karma-browserstack-launcher": "1.4.0",
-    "karma-junit-reporter": "2.0.1"
+    "karma-junit-reporter": "2.0.1",
+    "puppeteer": "8.0.0"
   }
 }
