--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
     "puppeteer": "8.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.3.2"
   }
 }
