--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browserstack-local": "1.4.8",
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
+    "lodash.get": "4.4.2",
     "puppeteer": "8.0.0"
   },
   "devDependencies": {
