--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "browserstack-local": "1.4.8",
+    "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
     "lodash.get": "4.4.2",
+    "minimist": "1.2.5",
     "puppeteer": "8.0.0"
   },
   "devDependencies": {
