--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
     "lodash.get": "4.4.2",
-    "minimist": "1.2.5",
-    "puppeteer": "8.0.0"
+    "minimist": "1.2.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
