--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
-    "browserstack-local": "1.4.8",
+    "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
-    "puppeteer": "8.0.0"
+    "lodash.get": "4.4.2",
+    "minimist": "1.2.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.3.2"
   }
 }
