--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
-    "browserstack-local": "1.4.8",
+    "browserstack-local": "1.4.9",
     "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
     "karma-junit-reporter": "2.0.1",
@@ -21,8 +21,8 @@
     "minimist": "1.2.5"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2"
+    "eslint": "8.11.0",
+    "eslint-config-prettier": "8.5.0",
+    "prettier": "2.6.0"
   }
 }
