--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "browserstack-local": "1.5.1",
     "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-edge-launcher": "0.4.2",
+    "karma-firefox-launcher": "2.1.2",
     "karma-junit-reporter": "2.0.1",
+    "karma-safari-launcher": "1.0.0",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
     "minimist": "1.2.6"
