--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "karma-webkit-launcher": "1.0.2",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
-    "minimist": "1.2.6",
-    "playwright": "1.26.0"
+    "minimist": "1.2.6"
   },
   "devDependencies": {
     "eslint": "8.23.1",
