--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
+    "@chiragrupani/karma-chromium-edge-launcher": "2.2.2",
     "browserstack-local": "1.4.9",
     "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-firefox-launcher": "2.1.2",
     "karma-junit-reporter": "2.0.1",
+    "karma-webkit-launcher": "1.0.2",
     "lodash.get": "4.4.2",
     "lodash.mergewith": "4.6.2",
-    "minimist": "1.2.5"
+    "minimist": "1.2.6",
+    "playwright": "1.26.0"
   },
   "devDependencies": {
-    "eslint": "8.11.0",
+    "eslint": "8.23.1",
     "eslint-config-prettier": "8.5.0",
-    "prettier": "2.6.0"
+    "prettier": "2.7.1"
   }
 }
