--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true && npm install --no-save playwright"
   },
   "author": "Blackbaud, Inc.",
   "license": "ISC",
   "dependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "2.2.2",
-    "@playwright/test": "1.26.0",
     "browserstack-local": "1.4.9",
     "cross-spawn": "7.0.3",
     "karma-browserstack-launcher": "1.6.0",
