--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "2.2.2",
-    "browserstack-local": "1.4.9",
     "cross-spawn": "7.0.3",
-    "karma-browserstack-launcher": "1.6.0",
-    "karma-chrome-launcher": "3.1.1",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "2.1.2",
     "karma-junit-reporter": "2.0.1",
     "karma-webkit-launcher": "1.0.2",
