--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true && npm install --no-save playwright"
+    "postinstall": "export PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true && npm install --no-save --audit=false playwright"
   },
   "author": "Blackbaud, Inc.",
   "license": "ISC",
