--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chiragrupani/karma-chromium-edge-launcher": "2.2.2",
     "browserstack-local": "1.4.9",
     "cross-spawn": "7.0.3",
+    "fs-extra": "10.1.0",
     "karma-browserstack-launcher": "1.6.0",
     "karma-chrome-launcher": "3.1.1",
     "karma-firefox-launcher": "2.1.2",
